Ensure download directory exists before starting download